// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 1`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 0px;
}

<div
  className="c0 c1"
/>
`;

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 2`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 1;
}

.c2:not(:first-child) {
  margin-left: 2px;
}

.c3 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 0px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 1)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title1
    </div>
  </div>
</div>
`;

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 3`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 1;
}

.c2:not(:first-child) {
  margin-left: 2px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 0.4;
}

.c7:not(:first-child) {
  margin-left: 2px;
}

.c3 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 40px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 2)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title1
    </div>
  </div>
  <div
    className="c7"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 2)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title2
    </div>
  </div>
</div>
`;

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 1`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 0px;
}

<div
  className="c0 c1"
/>
`;

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 2`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 1;
}

.c2:not(:first-child) {
  margin-left: 2px;
}

.c3 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 0px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 1)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title1
    </div>
  </div>
</div>
`;

exports[`<TabBar> Renders correctly (shows with 2 or more tabs) 3`] = `
.c1 {
  padding: 0 10px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 1;
}

.c2:not(:first-child) {
  margin-left: 2px;
}

.c7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  color: #000;
  height: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 250px;
  border-radius: 3px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding-right: 10px;
  background-color: #fff;
  box-sizing: border-box;
  opacity: 0.4;
}

.c7:not(:first-child) {
  margin-left: 2px;
}

.c3 {
  height: 30px;
  width: 30px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-size: 20px;
  font-weight: bold;
  padding-left: 5px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  box-sizing: border-box;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  text-transform: uppercase;
}

.c6 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  overflow: hidden;
  white-space: nowrap;
  text-overflow: ellipsis;
}

.c4 {
  height: 30px;
  width: 16px;
  margin: 0 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 {
  width: 16px;
  height: 16px;
  background-color: #fc0;
}

.c0 {
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-transition: height 100ms ease;
  transition: height 100ms ease;
  height: 40px;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 2)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title1
    </div>
  </div>
  <div
    className="c7"
    style={
      Object {
        "maxWidth": "calc((100% - 14px) / 2)",
      }
    }
  >
    <div
      className="c3"
    >
      A
    </div>
    <div
      className="c4"
    >
      <div
        className="c5"
      />
    </div>
    <div
      className="c6"
    >
      title2
    </div>
  </div>
</div>
`;
